@@ -424,6 +424,16 @@
            </widget>
           </item>
           <item>
+           <widget class="QCheckBox" name="checkBox_auto_range">
+            <property name="text">
+             <string>Auto XY-range</string>
+            </property>
+            <property name="checked">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+          <item>
            <spacer name="horizontalSpacer_5">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
